# codingbat

./: .gitignore  pyproject.toml
recursion-1/: 01-factorial.py  03-fibonacci.py  08-count8.py  09-powerN.py  11-countHi.py  12-changeXY.py  13-changePi.py  17-array220.py  18-allStar.py  19-pairStar.py  20-endX.py  21-countPairs.py  22-countAbc.py  23-count11.py  24-stringClean.py  25-countHi2.py  26-parenBit.py  29-strCopies.py  30-strDist.py  allStar.py  array11.py  array220.py  array6.py  bunnyEars.py  bunnyEars2.py  changePi.py  changeXY.py  count11.py  count7.py  count8.py  countAbc.py  countHi.py  countHi2.py  countPairs.py  countX.py  endX.py  factorial.py  fibonacci.py  nestParen.py  noX.py  (+10 more)
recursion-2/: 02-groupSum6.py  03-groupNoAdj.py  04-groupSum5.py  05-groupSumClump.py  07-splitOdd10.py  08-split53.py  groupNoAdj.py  groupSum.py  groupSum5.py  groupSum6.py  groupSumClump.py  split53.py  splitArray.py  splitOdd10.py
